# actix-auth-example

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
.well-known/: security.txt
init/: db-init.js
src/: config.rs  main.rs  templating.rs
src/auth/: credentials.rs  csrf.rs  email.rs  middleware.rs  mod.rs  session.rs  totp.rs
src/db/: auth.rs  email.rs  mod.rs  session.rs  totp.rs  user.rs
src/handlers/: auth.rs  mod.rs
src/handlers/user/: delete.rs  email.rs  mod.rs  modify.rs  register.rs  totp.rs
src/models/: mod.rs  server_error.rs  service_error.rs  user.rs
static/: menu.css  menu.min.css  style.css  style.min.css
templates/: 2fa.html  about.html  base.html  email_verify_success.html  error.html  forgot_password.html  home.html  login.html  message.html  otp.html  reg_success.html  register.html  reset_password.html  user.html  zone.html
templates/user/: 2fa.html  2fa_backup.html  delete.html  email.html  password.html  picture.html  user.html  username.html
